--- a/src/views/public/user/reset.ejs
+++ b/src/views/public/user/reset.ejs
@@ -1,6 +1,6 @@
 <div class="container d-flex justify-content-center align-items-center cont-reset">
   <div class="text-center w-100">
-    <form class="form-reset" autocomplete="off">
+    <form class="form-reset" autocomplete="off" method="POST" action="/user/reset">
       <a href="/">
         <img class="mb-4" src="/img/logo.png" alt="" width="72" height="72">
       </a>
@@ -13,7 +13,7 @@
       <label for="resetEmail" class="sr-only">
         Email address
       </label>
-      <input type="email" id="resetEmail" class="form-control" placeholder="Email address" required autofocus>
+      <input type="email" id="resetEmail" name="resetEmail" class="form-control" placeholder="Email address" required autofocus>
 
       <%- include ('../partials/messages.ejs') %>
 
