--- a/src/views/public/user/register.ejs
+++ b/src/views/public/user/register.ejs
@@ -10,15 +10,47 @@
       <label for="registerName" class="sr-only">
         Full Name
       </label>
-      <input type="text" id="registerName" name="registerName" class="form-control" placeholder="Full Name" required autofocus>
+      <input 
+        type="text" 
+        id="registerName" 
+        name="registerName" 
+        class="form-control" 
+        placeholder="Full Name" 
+        required 
+        autofocus 
+        <% if(typeof(fullname) !== "undefined") { %>
+          value= "<%- fullname %>"
+        <% } %>
+      >
       <label for="registerEmail" class="sr-only">
         Email address
       </label>
-      <input type="email" id="registerEmail" name="registerEmail" class="form-control" placeholder="Email address" required>
+      <input 
+        type="email" 
+        id="registerEmail" 
+        name="registerEmail" 
+        class="form-control" 
+        placeholder="Email address" 
+        required 
+        <% if(typeof(email) !== "undefined") { %>
+          value= "<%- email %>"
+        <% } %>
+      >
       <label for="registerPassword" class="sr-only">
         Password
       </label>
-      <input type="password" id="registerPassword" name="registerPassword" class="form-control" placeholder="Password" minlength="6" required>
+      <input 
+        type="password" 
+        id="registerPassword" 
+        name="registerPassword" 
+        class="form-control" 
+        placeholder="Password" 
+        minlength="6" 
+        required 
+        <% if(typeof(password) !== "undefined") { %>
+          value= "<%- password %>"
+        <% } %>
+      >
 
       <%- include ('../partials/messages.ejs') %>
 
