--- a/src/views/public/partials/messages.ejs
+++ b/src/views/public/partials/messages.ejs
@@ -14,3 +14,30 @@
       </div>
   </div>
 <% } %>
+
+<% if(success_msg != '') { %>
+  <div class="cont-error">
+    <div class="alert alert-success alert-dismissible fade show">
+      <strong>Success!</strong> <%- success_msg %>
+      <button type="button" class="close" data-dismiss="alert">&times;</button>
+    </div>
+  </div>
+<% } %>
+
+<% if(error_msg != '') { %>
+  <div class="cont-error">
+    <div class="alert alert-danger alert-dismissible fade show">
+      <strong>Error!</strong> <%- error_msg %>
+      <button type="button" class="close" data-dismiss="alert">&times;</button>
+    </div>
+  </div>
+<% } %>
+
+<% if(error != '') { %>
+  <div class="cont-error">
+    <div class="alert alert-danger alert-dismissible fade show">
+      <strong>Error!</strong> <%- error %>
+      <button type="button" class="close" data-dismiss="alert">&times;</button>
+    </div>
+  </div>
+<% } %>
