--- a/src/views/public/user/profile.ejs
+++ b/src/views/public/user/profile.ejs
@@ -9,25 +9,51 @@
     <div class="row">
       <div class="col-md-3"></div>
       <div class="col-md-6">
-        <form action="">
+        <form action="" method="POST">
           <div class="form-group mb-2">
             <label for="profileName">Full name</label>
-            <input class="form-control" type="text" name="profileName" id="profileName">
+            <input 
+              class="form-control" 
+              type="text" 
+              name="profileName" 
+              id="profileName" 
+              <% if(typeof(user) !== "undefined") { %>
+                value= "<%- user.fullname %>"
+              <% } %>
+            >
           </div>
 
           <div class="form-group mb-2">
             <label for="profileEmail">Email</label>
-            <input class="form-control" type="text" name="profileEmail" id="profileEmail">
+            <input 
+              class="form-control" 
+              type="text" 
+              name="profileEmail" 
+              id="profileEmail" 
+              <% if(typeof(user) !== "undefined") { %>
+                value= "<%- user.email %>"
+              <% } %>
+            >
           </div>
 
           <div class="form-group mb-2">
             <label for="newPassword">New password</label>
-            <input class="form-control" type="text" name="newPassword" id="newPassword">
+            <input 
+              class="form-control" 
+              type="text" 
+              name="newPassword" 
+              id="newPassword"
+            >
           </div>
 
           <div class="form-group mb-2">
             <label for="confirmPassword">Confirm new password</label>
-            <input class="form-control" type="text" name="confirmPassword" id="confirmPassword">
+            <input 
+              class="form-control" 
+              type="text" 
+              name="confirmPassword" 
+              id="confirmPassword"
+            >
           </div>
 
           <a href="/" class="btn btn-secondary">Cancel</a>
