--- a/src/views/public/partials/messages.ejs
+++ b/src/views/public/partials/messages.ejs
@@ -33,6 +33,15 @@
   </div>
 <% } %>
 
+<% if(warning_msg != '') { %>
+  <div class="cont-error">
+    <div class="alert alert-warning alert-dismissible fade show">
+      <strong>Warning!</strong> <%- warning_msg %>
+      <button type="button" class="close" data-dismiss="alert">&times;</button>
+    </div>
+  </div>
+<% } %>
+
 <% if(error != '') { %>
   <div class="cont-error">
     <div class="alert alert-danger alert-dismissible fade show">
